@@ -1,6 +1,6 @@
 // JSRootInterface.js
 //
-// user interface for JavaScript ROOT Web Page.
+// default user interface for JavaScript ROOT Web Page.
 //
 
 
@@ -40,7 +40,11 @@ function BuildNoBrowserGUI(online) {
    var running_request = {};
 
    var filename = null;
-   if (!online) filename = JSROOT.GetUrlOption("file");
+   if (!online) {
+      filename = JSROOT.GetUrlOption("file");
+      var filesdir = JSROOT.GetUrlOption("path");
+      if (filesdir!=null) filename = filesdir + filename; 
+   }
 
    var itemname = JSROOT.GetUrlOption("item");
    if (itemname) itemsarr.push(itemname);
@@ -427,9 +431,13 @@ function BuildSimpleGUI() {
    if (JSROOT.GetUrlOption("nobrowser")!=null)
       return BuildNoBrowserGUI(false);
 
-
-   var files = myDiv.attr("files");
-   if (!files) files = "file/hsimple.root";
+   var files = JSROOT.GetUrlOption("files");
+   if (files==null) files = myDiv.attr("files");
+   var filesdir = JSROOT.GetUrlOption("path");
+   if (filesdir==null) filesdir = myDiv.attr("path");
+   
+   if (files==null) files = "files/hsimple.root";
+   if (filesdir==null) filesdir = "";
    var arrFiles = files.split(';');
 
    var guiCode = "<div id='overlay'><font face='Verdana' size='1px'>&nbspJSROOT version " + JSROOT.version + "&nbsp</font></div>"
@@ -440,12 +448,12 @@ function BuildSimpleGUI() {
       +'<small><sub>*: Other URLs might not work because of cross site scripting protection, see e.g. <a href="https://developer.mozilla.org/en/http_access_control">developer.mozilla.org/http_access_control</a> on how to avoid it.</sub></small></p>'
       +'<form name="ex">'
       +'<div style="margin-left:10px;">'
-      +'<input type="text" name="state" value="" size="30" id="urlToLoad"/><br/>'
+      + '<input type="text" name="state" value="" size="30" id="urlToLoad"/><br/>'
       +'<select name="s" size="1" '
       +'onchange="document.ex.state.value = document.ex.s.options[document.ex.s.selectedIndex].value;document.ex.s.selectedIndex=0;document.ex.s.value=\'\'">'
       +'<option value = " " selected = "selected">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</option>';
    for (var i=0; i<arrFiles.length; i++) {
-      guiCode += '<option value = "' + arrFiles[i] + '">' + arrFiles[i] + '</option>';
+      guiCode += '<option value = "' + filesdir + arrFiles[i] + '">' + arrFiles[i] + '</option>';
    }
    guiCode += '</select>'
       +'</div>'
